--- a/Proyecto 01 - HR Analytics/00-apellido-nombre-proyecto1.ipynb
+++ b/Proyecto 01 - HR Analytics/00-apellido-nombre-proyecto1.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 139,
    "source": [
     "import numpy as np # tratamiento de arreglos\r\n",
     "import pandas as pd # tratamiento y carga de dataframes\r\n",
@@ -90,6 +90,7 @@
     "\r\n",
     "import sklearn\r\n",
     "from sklearn.model_selection import train_test_split # paraticion de la data\r\n",
+    "from sklearn.impute import SimpleImputer # imputacion numericas y categoricas\r\n",
     "\r\n",
     "import imblearn\r\n",
     "from imblearn.under_sampling import RandomUnderSampler # submuestreo\r\n",
@@ -1734,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 146,
    "source": [
     "sns.histplot(data = X_train, x = 'age')"
    ],
@@ -1747,7 +1748,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 120
+     "execution_count": 146
     },
     {
      "output_type": "display_data",
@@ -2067,48 +2068,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "### Analizamos la correlacion"
@@ -2157,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 128,
    "source": [
     "X_train.isna().sum()"
    ],
@@ -2182,14 +2141,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 103
+     "execution_count": 128
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 129,
    "source": [
     "X_train[['education', 'previous_year_rating']].isna().mean()"
    ],
@@ -2204,14 +2163,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 105
+     "execution_count": 129
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 130,
    "source": [
     "msno.matrix(X_train)"
    ],
@@ -2224,7 +2183,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 107
+     "execution_count": 130
     },
     {
      "output_type": "display_data",
@@ -2246,69 +2205,394 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 131,
    "source": [
-    "# considerando un mayor rating como mejor calificado, imputamos a los no calificados con 0\r\n",
-    "X_train[ \"previous_year_rating\"] = X_train[\"previous_year_rating\"].fillna(0)"
+    "X_train_num = X_train.select_dtypes('number')\r\n",
+    "X_train_cat = X_train.select_dtypes('object')"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
+   "execution_count": 132,
+   "source": [
+    "X_train_num.head(2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "       no_of_trainings  age  previous_year_rating  length_of_service  \\\n",
+       "11129                1   38                   3.0                  5   \n",
+       "4604                 1   29                   4.0                  4   \n",
+       "\n",
+       "       KPIs_met >80%  awards_won?  avg_training_score  \n",
+       "11129              0            0                  57  \n",
+       "4604               0            0                  60  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>no_of_trainings</th>\n",
+       "      <th>age</th>\n",
+       "      <th>previous_year_rating</th>\n",
+       "      <th>length_of_service</th>\n",
+       "      <th>KPIs_met &gt;80%</th>\n",
+       "      <th>awards_won?</th>\n",
+       "      <th>avg_training_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11129</th>\n",
+       "      <td>1</td>\n",
+       "      <td>38</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4604</th>\n",
+       "      <td>1</td>\n",
+       "      <td>29</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 132
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "source": [
+    "X_train_cat.head(2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "       department     region   education gender recruitment_channel\n",
+       "11129  Operations  region_22  Bachelor's      f               other\n",
+       "4604        Legal  region_22  Bachelor's      f               other"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>department</th>\n",
+       "      <th>region</th>\n",
+       "      <th>education</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>recruitment_channel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11129</th>\n",
+       "      <td>Operations</td>\n",
+       "      <td>region_22</td>\n",
+       "      <td>Bachelor's</td>\n",
+       "      <td>f</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4604</th>\n",
+       "      <td>Legal</td>\n",
+       "      <td>region_22</td>\n",
+       "      <td>Bachelor's</td>\n",
+       "      <td>f</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 133
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Preprocesamiento"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### imputación numéricas"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "source": [
+    "X_train_num.isnull().sum()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "no_of_trainings            0\n",
+       "age                        0\n",
+       "previous_year_rating    3319\n",
+       "length_of_service          0\n",
+       "KPIs_met >80%              0\n",
+       "awards_won?                0\n",
+       "avg_training_score         0\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 136
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### considerando un mayor rating como mejor calificado, imputamos a los no calificados con 0"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "source": [
+    "X_train[ \"previous_year_rating\"] = X_train[\"previous_year_rating\"].fillna(0)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### imputación categoricos"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "source": [
+    "X_train_cat.isnull().sum()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "department                0\n",
+       "region                    0\n",
+       "education              1910\n",
+       "gender                    0\n",
+       "recruitment_channel       0\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 138
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "source": [
+    "imputer_cat = SimpleImputer(strategy='most_frequent')\r\n",
+    "imputer_cat.fit(X_train_cat)\r\n",
+    "X_train_cat_imputed = pd.DataFrame(imputer_cat.transform(X_train_cat), columns = X_train_cat.columns)\r\n",
+    "\r\n",
+    "X_train_cat_imputed.head(2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   department     region   education gender recruitment_channel\n",
+       "0  Operations  region_22  Bachelor's      f               other\n",
+       "1       Legal  region_22  Bachelor's      f               other"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>department</th>\n",
+       "      <th>region</th>\n",
+       "      <th>education</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>recruitment_channel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Operations</td>\n",
+       "      <td>region_22</td>\n",
+       "      <td>Bachelor's</td>\n",
+       "      <td>f</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Legal</td>\n",
+       "      <td>region_22</td>\n",
+       "      <td>Bachelor's</td>\n",
+       "      <td>f</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 141
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Tratamiento atipicos"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "source": [
+    "# pd.cut( x=X_train_num['age'], bins=[20, 29, 39, 49], labels=['20', '30', '40'] )\r\n",
+    "pd.cut( x=X_train_num['age'], bins=[20, 29, 39, 60], labels=['20', '30', '+30'] )\r\n",
+    "# X_train_num"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "11129     30\n",
+       "4604      20\n",
+       "18510     20\n",
+       "50118     20\n",
+       "48899     30\n",
+       "        ... \n",
+       "7227      20\n",
+       "23447    +30\n",
+       "20967     30\n",
+       "12046     30\n",
+       "44707     20\n",
+       "Name: age, Length: 43846, dtype: category\n",
+       "Categories (3, object): ['20' < '30' < '+30']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 152
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 100,
    "source": [
+    "# variable tiene experiencia\r\n",
     "X_train['experiencia'] = X_train['previous_year_rating'].apply(lambda x: 'nuevo' if x ==0 else 'antiguo')\r\n",
-    "display( X_train[[\"previous_year_rating\",\"length_of_service\",'experiencia']][X_train['experiencia'] =='nuevo'] )"
+    "# display( X_train[[\"previous_year_rating\",\"length_of_service\",'experiencia']][X_train['experiencia'] =='nuevo'] )\r\n",
+    "# rango de edades\r\n"
    ],
    "outputs": [
     {
@@ -2428,66 +2712,6 @@
       ]
      },
      "metadata": {}
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "source": [
-    "X_train['previous_year_rating']"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "11129    3.0\n",
-       "4604     4.0\n",
-       "18510    NaN\n",
-       "50118    3.0\n",
-       "48899    3.0\n",
-       "        ... \n",
-       "7227     2.0\n",
-       "23447    1.0\n",
-       "20967    3.0\n",
-       "12046    5.0\n",
-       "44707    NaN\n",
-       "Name: previous_year_rating, Length: 43846, dtype: float64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 97
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "source": [],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "11129    Experienced\n",
-       "4604     Experienced\n",
-       "18510    Experienced\n",
-       "50118    Experienced\n",
-       "48899    Experienced\n",
-       "            ...     \n",
-       "7227     Experienced\n",
-       "23447    Experienced\n",
-       "20967    Experienced\n",
-       "12046    Experienced\n",
-       "44707    Experienced\n",
-       "Name: previous_year_rating, Length: 43846, dtype: object"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 96
     }
    ],
    "metadata": {}
